--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Port=5432; Database=BlogProject; User Id=postgres; Password=Ktt69534!"
   }
 }
